--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <hr>
     <table cellspacing="20">
       <tr>
-        <td><img src="C:\Users\Olek\Documents\AY webdev course\html personal site\images\random-person.png" alt="a photo of a random person"></td>
+        <td><img src="/klamot/CV/blob/main/images/random-person.png" alt="a photo of a random person"></td>
         <td>
           <h3>Olek Klamski personal page</h3>
           <p><a href="about-me.html">About me</a></p>
