--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>Test webpage</title>
+    <link rel="stylesheet" href="css\styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
   </head>
+
   <body>
-    <hr>
+
     <table cellspacing="20">
       <tr>
-        <td><img src="https://github.com/klamot/CV/blob/main/images/random-person.png?raw=true" alt="a photo of a random person"></td>
+        <td><img src="images\random-person.png" alt="a photo of a random person"></td>
         <td>
-          <h3>Olek Klamski personal page</h3>
+          <h1>Olek Klamski</h1>
           <p><a href="about-me.html">About me</a></p>
           <p><a href="current-projects.html">Current projects</a></p>
           <p><a href="lectures-list.html">lectures list</a></p>
@@ -22,8 +26,8 @@
     <hr>
     <h3>Books and Publications</h3>
     <ul>
-      <li>Html 5. The Essentials - Mc Grath Hill 2012</li>
-      <li>Bootstrap basics - Packt 2020</li>
+      <li>No publications so far</li>
+      <li>To be updated</li>
     </ul>
     <hr>
 
@@ -38,15 +42,15 @@
       <tbody>
         <tr>
           <td>2000-2005</td>
-          <td>Microsoft</td>
+          <td>Warehouse operative</td>
         </tr>
         <tr>
           <td>2005-2016</td>
-          <td>Amazon</td>
+          <td>Forklift driver</td>
         </tr>
         <tr>
           <td>2016-Present</td>
-          <td>Google</td>
+          <td>Crane operator</td>
 
         </tr>
       </tbody>
@@ -70,7 +74,6 @@
         <td>&#11088</td>
       </tr>
     </table>
-    <hr>
 
   </body>
 </html>
