--- a/about-me.html
+++ b/about-me.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>About me </title>
+    <link rel="stylesheet" href="css\styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
   </head>
   <body>
     <hr>
@@ -23,7 +26,7 @@
 
       <tr>
         <td>1997</td>
-        <td>Curb painting at Parking Strzeżony Kopernika</td>
+        <td>Curb painter at Parking Strzeżony Kopernika</td>
       </tr>
       <tr>
         <td>2003</td>
@@ -47,7 +50,7 @@
       </tr>
     </tbody>
 <tfoot>
-  
+
 </tfoot>
 
     </table>
