--- a/current-projects.html
+++ b/current-projects.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Current projects</title>
+    <link rel="stylesheet" href="css\styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
   </head>
   <body>
     <hr>
