--- a/about-me.html
+++ b/about-me.html
@@ -13,7 +13,7 @@
     <p>  This is my first 'about me' website. I am using Angela's Yu udemy course.</p>
      <p>Additionaly i look for references on w3s, so, mdn, and google.</p>
     <hr>
-    <p>My Resume</p>
+    <h1>My Resume</h1>
     <table>
       <h3>Work Experience</h3>
       <thead>
